# review-service

./: Cargo.toml  build.rs
migrations/: 000_create_review_table.sql
proto/: review.proto
src/: main.rs
src/api/: mod.rs  review.rs
src/repo/: review.rs
src/svc/: review.rs
