[package]
name = "punk-server"
version = "0.1.0"
edition = "2021"
authors = ["allanger <allanger@zohomail.com>"]

[dependencies]
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost = "0.10"
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.7.1", features = ["tls", "compression"] }
tower = { version = "0.4" }
# Tracing
tracing = "0.1.16"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
# Required for wellknown types
prost-types = "0.10"
# Hyper example
http = "0.2"
http-body = "0.4.2"
hyper = { version = "0.14", features = ["full"] }
pin-project = "1.0"
warp = "0.3"
# Health example
tonic-health = "0.6.0"
# Reflection example
listenfd = "0.5.0"
tonic-reflection = "0.4.0"
# streaming example
h2 = "0.3"
tokio-rustls = "*"
hyper-rustls = { version = "0.23", features = ["http2"] }
rustls-pemfile = "*"
tower-http = { version = "0.3.0", features = ["add-extension"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }
uuid = {version = "1.0.0", features = ["v4"]   }
include_dir = "0.7.2"
sqlx-pg-migrate = "1.0"
env_logger = "0.9.0"
log = "0.4.0"
once_cell = "1.10.0"


[build-dependencies]
tonic-build = { version = "0.7.0", features = ["prost", "compression"] }

